2003-06-25  Bruno Haible  <bruno@clisp.org>

	* readlink.c: New file.

2003-06-20  Bruno Haible  <bruno@clisp.org>

	Assume C89, so PARAMS isn't needed.
	* unicodeio.h (PARAMS): Remove.
	* unicodeio.c: Don't use PARAMS.

2003-06-18  Jim Meyering  <jim@meyering.net>

	Merge changes from coreutils.
	* readutmp.c: Include <string.h> and <stdlib.h> unconditionally.
	Remove explicit declarations of xmalloc and realloc.
	Include xalloc.h.
	(read_utmp): Remove anachronistic cast of xmalloc.

2003-06-17  Paul Eggert  <eggert@twinsun.com>

	Assume C89, so PARAMS isn't needed.
	* backupfile.h (PARAMS): Remove.  All uses removed.
	* closeout.h, dirname.h, filemode.h, fsusage.h, getdate.h, getline.h,
	group-member.h, hard-locale.h, hash.h, linebuffer.h, long-options.h,
	makepath.h, memcasecmp.h, memcoll.h, modechange.h, mountlist.h,
	path-concat.h, physmem.h, posixtm.h, quote.h, readutmp.h, same.h,
	save-cwd.h, savedir.h, stdio-safer.h, strtoimax.c, strverscmp.h,
	unistd-safer.h, version-etc.h, xalloc.h, xreadlink.h, xstrtod.h,
	xstrtol.h: Likewise.
	* filemode.h, hard-locale.h, memcoll.h, modechange.h, physmem.h,
	same.h, strverscmp.h: Do not include config.h; no longer needed.
	Anyway, config.h should always be included before any other file.

2003-06-11  Simon Josefsson  <jas@extundo.com>

	* sysexit_.h: New file.

2003-05-20  Derek Price  <derek@ximbiot.com>

	* stat.c [LSTAT]: Compile/use slash_aware_lstat only if it is necessary.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* strchrnul.h: New file.
	* strchrnul.c: New file.

2003-06=10  Simon Josefsson <jas@extundo.com>

	* argp.h: New file, from glibc.
	* argp-ba.c: New file, from glibc.
	* argp-eexst.c: New file, from glibc.
	* argp-fmtstream.c: New file, from glibc.
	* argp-fmtstream.h: New file, from glibc.
	* argp-fs-xinl.c: New file, from glibc.
	* argp-help.c: New file, from glibc.
	* argp-namefrob.h: New file, from glibc.
	* argp-parse.c: New file, from glibc.
	* argp-pv.c: New file, from glibc.